syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_dq_rule_execute_sql;


message DsDqRuleExecuteSqlBean {

     int32 id= 1;
     optional int32  index= 2;
     optional string sql=3 ;
     optional string table_alias= 4;
     optional int32 type=5 ;
     optional string create_time= 6;
     optional string update_time= 7;
     optional bool is_error_output_sql= 8;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsDqRuleExecuteSqlBeanService {
  rpc ListDsDqRuleExecuteSqlBeans(ListDsDqRuleExecuteSqlBeansRequest) returns (ListDsDqRuleExecuteSqlBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsDqRuleExecuteSqlBeans"
    };
  }

  rpc GetDsDqRuleExecuteSqlBean(GetDsDqRuleExecuteSqlBeanRequest) returns (DsDqRuleExecuteSqlBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsDqRuleExecuteSqlBeans/*}"
    };
  }

  rpc CreateDsDqRuleExecuteSqlBean(CreateDsDqRuleExecuteSqlBeanRequest) returns (DsDqRuleExecuteSqlBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsDqRuleExecuteSqlBeans"
      body: "DsDqRuleExecuteSqlBean"
    };
  }

  rpc UpdateDsDqRuleExecuteSqlBean(UpdateDsDqRuleExecuteSqlBeanRequest) returns (DsDqRuleExecuteSqlBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsDqRuleExecuteSqlBean.name=DsDqRuleExecuteSqlBeans/*}"
      body: "DsDqRuleExecuteSqlBean"
    };
  }

  rpc DeleteDsDqRuleExecuteSqlBean(DeleteDsDqRuleExecuteSqlBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsDqRuleExecuteSqlBeans/*}"
    };
  }
}

// message DsDqRuleExecuteSqlBean {
// ! This should be defined elsewhere
// }

message ListDsDqRuleExecuteSqlBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsDqRuleExecuteSqlBeansResponse {
  // The field name should match the noun "DsDqRuleExecuteSqlBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsDqRuleExecuteSqlBean DsDqRuleExecuteSqlBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsDqRuleExecuteSqlBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsDqRuleExecuteSqlBeanRequest {
  // The parent resource name where the DsDqRuleExecuteSqlBean is to be created.
  string parent = 1;

  // The DsDqRuleExecuteSqlBean id to use for this DsDqRuleExecuteSqlBean.
  string DsDqRuleExecuteSqlBean_id = 2;

  // The DsDqRuleExecuteSqlBean resource to create.
  // The field name should match the Noun in the method name.
  DsDqRuleExecuteSqlBean DsDqRuleExecuteSqlBean = 3;
}

message UpdateDsDqRuleExecuteSqlBeanRequest {
  // The DsDqRuleExecuteSqlBean resource which replaces the resource on the server.
  DsDqRuleExecuteSqlBean DsDqRuleExecuteSqlBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsDqRuleExecuteSqlBeanRequest {
  // The resource name of the DsDqRuleExecuteSqlBean to be deleted.
  string name = 1;
}
